--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,6 @@
 body{
-  background: #222438;
-  font-family: Georgia, Times New Roman, Times, serif;
+  background: #F2F1EF;
+  font-family: Georgia, Times New Roman, Times, serif,'Montserrat', sans-serif;
   font-weight: bold;
   font-size: 30px;
 }
@@ -52,8 +52,8 @@ span.developer_role {
 .experience_tag.factorial {
     /* background: white; */
     font-weight: 100;
-    font-size: 50px;
-    text-align: center;
-    color:  w;
-    /* margin-top: -1%; */
+    font-size: 47px;
+    text-align: left;
+    font-family: 'Montserrat', sans-serif;
+    margin: 61px;
 }
