--- a/custom.css
+++ b/custom.css
@@ -1,6 +1,7 @@
 body{
-  background: #F2F1EF;
-  font-family: Georgia, Times New Roman, Times, serif,'Montserrat', sans-serif;
+  /* background: #F2F1EF; */
+  background: #D7E5E7;
+  font-family: 'Montserrat',Georgia, Times New Roman, Times, serif, sans-serif;
   font-weight: bold;
   font-size: 30px;
 }
@@ -30,7 +31,7 @@ span.developer_role {
 }
 
 .developer_anim{
-  color: white;
+  /* color: white; */
   /* margin-top: 4%; */
   background:  #222438;
   width:  100%;
@@ -38,22 +39,65 @@ span.developer_role {
 
 .developer_anim span {
   color: white;
-  font-size: 68px;
+  font-size: 65px;
   font-weight:100;
   height: 100%;
+  text-align: r;
   font-family: 'Montserrat', sans-serif;
 }
 
+.developer_anim span strong{
+  color: #E1997B;
+}
+
 .factorial  {
-    height: 300px;
     margin-top: 4%;
 }
 
 .experience_tag.factorial {
     /* background: white; */
-    font-weight: 100;
-    font-size: 32px;
+    font-weight: 2;
+    font-size: 33px;
     text-align: left;
     font-family: 'Montserrat', sans-serif;
-    margin: 61px;
+    margin: 35px;
+}
+
+
+.pricing-table {
+  background-color: #fefefe;
+  border: solid 1px #cacaca;
+  width: 100%;
+  text-align: center;
+  list-style-type: none;
+}
+
+.pricing-table li {
+  border-bottom: dotted 1px #cacaca;
+  padding: 0.875rem 1.125rem;
+}
+
+.pricing-table li:last-child {
+  border-bottom: 0;
+}
+
+.pricing-table .title {
+  background-color: black;
+  color: white;
+  border-bottom: 0;
+}
+
+.pricing-table .price {
+  /* background-color: #e6e6e6; */
+  /* font-size: 2rem; */
+  border-bottom: 0;
+}
+
+.pricing-table .description {
+  color: #8a8a8a;
+  font-size: 80%;
+}
+
+.pricing-table :last-child {
+  margin-bottom: 0;
 }
